<resources>
    <string name="app_name">Top Movies</string>
    <string name="connection_error">There was a problem communicating with the server. Please check your internet connection and try again.</string>

    <!-- Main Activity -->
    <string name="title_and_year">%1$s (%2$d)</string>
    <string name="imdb_rating">IMDB Rating: %1$s (%2$d votes)</string>

    <!-- Movie Activity -->
    <string name="metascore">Metascore: %1$s</string>
    <string name="released">Released: %1$s</string>
    <string name="rated">Rated: %1$s</string>
    <string name="runtime">Runtime: %1$s</string>
    <string name="country">Country: %1$s</string>
    <string name="genre">Genre: %1$s</string>
    <string name="director">Director: %1$s</string>
    <string name="writer">Writer: %1$s</string>
    <string name="actors">Actors: %1$s</string>
    <string name="languages">Languages: %1$s</string>
    <string name="awards">Awards: %1$s</string>
</resources>
