<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MovieActivity">

    <data>

        <import type="android.text.TextUtils" />

        <import type="com.jarettmillard.codesample.util.UiUtils" />

        <variable
            name="movie"
            type="com.jarettmillard.codesample.api.models.Movie" />
    </data>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:padding="@dimen/padding">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="150dp"
                    android:layout_height="225dp"
                    android:layout_marginEnd="@dimen/padding"
                    android:background="#ddd"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{movie.poster()}"
                    tools:ignore="ContentDescription" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp" />

                <TextView
                    android:id="@+id/imdb_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/padding"
                    android:layout_toEndOf="@id/image"
                    android:text="@{@string/imdb_rating(movie.imdbRating(), movie.imdbVotes())}"
                    tools:text="@string/imdb_rating" />

                <TextView
                    android:id="@+id/metascore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/imdb_rating"
                    android:layout_marginBottom="@dimen/padding"
                    android:layout_toEndOf="@id/image"
                    android:text="@{@string/metascore(movie.metascore())}"
                    app:visible="@{!TextUtils.isEmpty(movie.metascore())}"
                    tools:text="@string/metascore" />

                <TextView
                    android:id="@+id/released"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/metascore"
                    android:layout_marginBottom="@dimen/padding"
                    android:layout_toEndOf="@id/image"
                    android:text="@{@string/released(movie.released())}"
                    app:visible="@{!TextUtils.isEmpty(movie.released())}"
                    tools:text="@string/released" />

                <TextView
                    android:id="@+id/rated"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/released"
                    android:layout_marginBottom="@dimen/padding"
                    android:layout_toEndOf="@id/image"
                    android:text="@{@string/rated(movie.rated())}"
                    app:visible="@{!TextUtils.isEmpty(movie.rated())}"
                    tools:text="@string/rated" />

                <TextView
                    android:id="@+id/runtime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/rated"
                    android:layout_marginBottom="@dimen/padding"
                    android:layout_toEndOf="@id/image"
                    android:text="@{@string/runtime(movie.runtime())}"
                    app:visible="@{!TextUtils.isEmpty(movie.runtime())}"
                    tools:text="@string/runtime" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/runtime"
                    android:layout_toEndOf="@id/image"
                    android:text="@{@string/country(movie.country())}"
                    app:visible="@{!TextUtils.isEmpty(movie.country())}"
                    tools:text="@string/country" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@{movie.plot()}"
                app:visible="@{!TextUtils.isEmpty(movie.plot())}"
                tools:text="This is a test of the emergency broadcasting system. This is only a test." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@{@string/genre(UiUtils.nullSafeJoin(`, `, movie.genre()))}"
                app:visible="@{!TextUtils.isEmpty(UiUtils.nullSafeJoin(`, `, movie.genre()))}"
                tools:text="@string/genre" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@{@string/director(movie.director())}"
                app:visible="@{!TextUtils.isEmpty(movie.director())}"
                tools:text="@string/director" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@{@string/writer(movie.writer())}"
                app:visible="@{!TextUtils.isEmpty(movie.writer())}"
                tools:text="@string/writer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@{@string/actors(UiUtils.nullSafeJoin(`, `, movie.actors()))}"
                app:visible="@{!TextUtils.isEmpty(UiUtils.nullSafeJoin(`, `, movie.actors()))}"
                tools:text="@string/actors" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@{@string/languages(UiUtils.nullSafeJoin(`, `, movie.language()))}"
                app:visible="@{!TextUtils.isEmpty(UiUtils.nullSafeJoin(`, `, movie.language()))}"
                tools:text="@string/languages" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@{@string/awards(movie.awards())}"
                app:visible="@{!TextUtils.isEmpty(movie.awards())}"
                tools:text="@string/awards" />
        </LinearLayout>
    </ScrollView>
</layout>
